@@ -1,11 +1,11 @@
 README:  Tcl
-    This is the Tcl 8.3.4 source distribution.
-    You can get any release of Tcl from:
-        http://sourceforge.net/project/showfiles.php?group_id=10894
+    This is the Tcl 8.3.5 source distribution.
     Tcl/Tk is also available through NetCVS:
 	http://tcl.sourceforge.net/
+    You can get any source release of Tcl from the file distributions
+    link at the above URL.
 
-RCS: @(#) $Id: README,v 1.31.2.3 2001/10/03 20:26:09 hobbs Exp $
+RCS: @(#) $Id: README,v 1.31.2.4 2002/10/16 00:06:49 hobbs Exp $
 
 Contents
 --------
@@ -36,7 +36,7 @@ The home for Tcl/Tk sources and bug/patch database is on SourceForge:
 
 with the Tcl Developer Xchange hosted at:
 
-	http://www.tcl-tk.net/
+	http://www.tcl.tk/
 
 Tcl is a freely available open source package.  You can do virtually
 anything you like with it, such as modifying it, redistributing it,
@@ -48,16 +48,16 @@ and selling it either in whole or in part.  See the file
 
 Extensive documentation is available at our website.
 The home page for this release, including new features, is
-	http://www.tcl-tk.net/software/tcltk/8.3.html
+	http://www.tcl.tk/software/tcltk/8.3.html
 
 Detailed release notes can be found at
 	http://sourceforge.net/project/showfiles.php?group_id=10894
 
 Information about Tcl itself can be found at
-	http://www.tcl-tk.net/scripting/
+	http://www.tcl.tk/scripting/
 
 There are many Tcl books on the market.  Most are listed at
-	http://www.tcl-tk.net/resource/doc/books/
+	http://www.tcl.tk/resource/doc/books/
 
 2a. Unix Documentation
 ----------------------
@@ -95,7 +95,7 @@ There are brief notes in the unix/README, win/README, and mac/README about
 compiling on these different platforms.  There is additional information
 about building Tcl from sources at
 
-	http://www.tcl-tk.net/doc/howto/compile.html
+	http://www.tcl.tk/doc/howto/compile.html
 
 4. TclPro Development tools
 ---------------------------
@@ -107,6 +107,11 @@ TclPro was open-sourced when Scriptics/Ajuba was acquired by Interwoven.
 Visit its home at SourceForge for more information and source/binaries:
 
 	http://tclpro.sourceforge.net/
+
+ActiveState has picked up support for commercial Tcl development tools.
+More information can be found at
+
+	http://www.ActiveState.com/Tcl
 
 5. Tcl newsgroup
 ----------------
@@ -121,16 +126,16 @@ see the "Support and bug fixes" section below.
 
 Many people have created exciting packages and applications based on Tcl
 and/or Tk and made them freely available to the Tcl community.  An archive
-of these contributions is kept on the machine ftp.neosoft.com.  You
-can access the archive using anonymous FTP; the Tcl contributed archive is
-in the directory "/pub/tcl".  The archive also contains several FAQ
-("frequently asked questions") documents that provide solutions to problems
-that are commonly encountered by TCL newcomers.
+of these contributions is kept on the machine ftp://archives.tcl.tk/pub/tcl
+(aka ftp://ftp.procplace.com/pub/tcl).  You can access the archive using
+anonymous FTP.  The archive also contains several FAQ ("frequently asked
+questions") documents that provide solutions to problems that are commonly
+encountered by Tcl newcomers.
 
 7. Tcl Resource Center
 ----------------------
 
-Visit http://www.tcl-tk.net/resource/ to see an annotated index of
+Visit http://www.tcl.tk/resource/ to see an annotated index of
 many Tcl resources available on the World Wide Web.  This includes
 papers, books, and FAQs, as well as development tools, extensions,
 applications, binary releases, and patches.  You can also recommend
@@ -175,7 +180,7 @@ questions for which no-one else is likely to know the answer.  In addition,
 see the following Web site for links to other organizations that offer
 Tcl/Tk training:
 
-	http://www.tcl-tk.net/resource/community/commercial/training
+	http://www.tcl.tk/resource/community/commercial/training
 
 10. Thank You
 -------------
